Fix for missing -l options in grpc libraries

--- a/mingw-w64-grpc/PKGBUILD
+++ b/mingw-w64-grpc/PKGBUILD
@@ -85,6 +85,11 @@ build() {
       ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake.exe --build ./
+  
+  # fix for libraries missing -l option
+  sed -i 's/"advapi32"/-ladvapi32/g' ${srcdir}/build-${MINGW_CHOST}/lib/pkgconfig/absl_base.pc
+  sed -i 's/"dbghelp"/-ldbghelp/g' ${srcdir}/build-${MINGW_CHOST}/lib/pkgconfig/absl_symbolize.pc
+  sed -i 's/"bcrypt"/-lbcrypt/g' ${srcdir}/build-${MINGW_CHOST}/lib/pkgconfig/absl_random_internal_seed_material.pc
 }
 
 check() {
